# rsi-webhook-trader

./: .gitignore  SKILL.md  pyproject.toml  requirements.txt
app/: executor.py  main.py  scanner.py  state_manager.py
memory/: TRADE-LOG.md  TRADING-STRATEGY.md  activity_log.json
