[project]
name = "rsi-webhook-trader"
version = "0.1.0"
description = "TradingView RSI webhook receiver with Alpaca paper-trading execution"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "alpaca-py>=0.43.0",
    "pydantic>=2.10.0",
    "pandas-ta>=0.4.71b0",
    "python-dotenv>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
